--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
   "support": {
     "email": "dave0016@gmail.com",
     "issues": "https://github.com/zero-to-prod/regex-semver/issues",
-    "source": "https://github.com/zero-to-prod/data-model",
-    "docs": "https://zero-to-prod.github.io/regex-semver/",
+    "source": "https://github.com/zero-to-prod/regex-semver",
+    "docs": "https://zero-to-prod.github.io/regex-semver",
     "security": "https://github.com/zero-to-prod/regex-semver/blob/main/SECURITY.md"
   },
   "license": "MIT",
