maint/dock Updated `composer.json`.

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     }
   ],
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.1",
+    "zero-to-prod/dock": "^1.0"
   },
   "autoload": {
     "psr-4": {
