--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,7 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
-    "zero-to-prod/dock": "^1.0"
+    "php": ">=7.1"
   },
   "autoload": {
     "psr-4": {
