--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,9 @@
     "php": ">=7.1",
     "zero-to-prod/package-helper": "^1.1.3"
   },
+  "bin": [
+    "bin/zero-to-prod-regex-semver"
+  ],
   "autoload": {
     "psr-4": {
       "Zerotoprod\\RegexSemver\\": "src/"
