--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,4 @@
 /test.sh                  export-ignore
 /art/                     export-ignore
 /dock                     export-ignore
+.composer-require-checker.json export-ignore
